Write unit tests for retrieveAllTodos methods (GET)